# atlaas

./: .gitignore  .gitlab-ci.yml  .robotpkg.sh  .travis.bash  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  TODO.md  doxyfile.dox.in
CMakeModules/: FindGSL.cmake  FindGdalWrap.cmake  FindPointMatcher.cmake  InstallPkgConfigFile.cmake
include/atlaas/: atlaas.hpp  common.hpp  io.hpp  matcher.hpp  pcd.hpp  region.hpp  tilesio.hpp
python/: Makefile  README.md  atlaas.pxd  atlaas.pyx  ghost_ros.py  movie.py  process.py  region_to_display.py  setup.py  test.py  test_morse.py  test_pymorse.py  test_reprocess.py  test_ros.py  tile_to_region.py
python/atlaas/: __init__.py  _atlaas.pxd  _atlaas.pyx  region.py  version.py
python/atlaas/helpers/: bresenham.py  gdal.py  gdal2.py  gladys.py  gladys2.py  image.py  matplot.py  ros.py  rosgrid.py
python/test/: .gitignore  multi-goals.py  multi-ros.py  multi-tmux.sh  test_overlap.py  test_reprocess.py
python/test/multi/: display.html  display2.html  multi-goals.py  multi-morse.py  multi-ros.py  multi-rviz.rviz  multi-tmux.sh  viridis.js
python/test/noisy/: ghost-ros.py  noisy-morse.py  noisy-ros.py  noisy-rviz.rviz  noisy-tmux.sh  reset-noise.py
python/test/simple/: simple-morse.py  simple-ros-repro.py  simple-ros.py  simple-rviz.rviz  simple-tmux.sh
python/tools/: atlaas_rosgrid.py  atlaas_rosnode.py  cmapclim.py  matlaas.py  matplot.py  movie.py  movie_cv.py  process.py  region_to_display.py  tile_to_region.py  velodyne_bag.py
python/tools/movie/: catlaas.py  cregion.py  movie.sh  movie2.py  patlaas.py  pos2json.py  pregion.py
rosatlaas/: CMakeLists.txt  build.sh  manifest.xml
rosatlaas/src/: atlaas.cpp
src/: CMakeLists.txt  atlaas.cpp  io.cpp  pcd.cpp  slide.cpp
test/: CMakeLists.txt  eigen_test.cpp  io_c_test.cpp  io_test.cpp  merge_test.cpp  pcd_test.cpp  region_test.cpp  tests.hpp
tools/: CMakeLists.txt  atlaas2pcd.cpp  atlaas2region.cpp  cmapclim.py  cmapclim2.py  convert_ascii.c  dem.cpp  fastmerge.cpp  global_heightmap.cpp  global_region.cpp  matlaas.py  matplot.py  pcd2atlaas.cpp  process.cpp  pypero.py
